--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ pygments: true
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : David Gibbons
+  email : david@dgibbons.net
+  github : davidgibbons
+  twitter : dgibbons0
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://dgibbons.net
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
