--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : dgibbons.net
+tagline: Yet another tech blag
 author :
   name : David Gibbons
   email : david@dgibbons.net
